# SlaTTformer

./: .gitignore  CMakeLists.txt  Character.h  Entity.h  README.md  RenderWindow.h  character.cpp  entity.cpp  main.cpp  math.cpp  renderwindow.cpp  worldGrid.cpp
include/: Animation.h  Camera.h  Character.h  Collider.h  ColliderComponent.h  Collision.h  Components.h  ECS.h  Entity.h  EventGenerator.h  FloorTile.h  Game.h  GameObject.h  Global.h  GravityComponent.h  GridComponent.h  KeyboardComponent.h  Map.h  MapComponent.h  Math.h  MouseComponent.h  PlayerStateMachine.h  PlayerStates.h  RenderWindow.h  SpriteComponent.h  State.h  StateMachine.h  StateMachineComponent.h  States.h  TestStateMachine.h  TextureManager.h  TileComponent.h  TransformComponent.h  Utils.h  WorldGrid.h
include/Components/: ColliderComponent.h  Components.h  GridComponent.h  KeyboardComponent.h  MapComponent.h  MouseComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h
include/StateMachines/: FishingStates.h  PlayerStateMachine.h  PlayerStates.h  StateMachine.h  StateMachines.h  TestStates.h
resources/: Map1.map  Map1.txt
resources/Entities/SpriteData/: Global
src/: Collider.cpp  EventGenerator.cpp  FishingStates.cpp  PlayerStateMachine.cpp  TestStateMachine.cpp  camera.cpp  character.cpp  collision.cpp  entity.cpp  floorTile.cpp  game.cpp  gameObject.cpp  main.cpp  map.cpp  playerStates.cpp  renderwindow.cpp  textureManager.cpp  vector2D.cpp  worldGrid.cpp
